# dotfiles

./: bootstrap.sh
X11/xorg.conf.d/: 20-keyboard-layout.conf
bootstrap/: aurman.sh  cabal.sh  pacman.sh  stow.sh
emacs/: .emacs
spacemacs/: .spacemacs
xmonad/: .Xdefaults  .Xresources  .xinitrc
xmonad/.xmonad/: build.sh  conky_dzen  myxmonad.cabal  showHintForKeymap.sh  trackpad-toggle.sh  xmonad.hs
xmonad/myxmonad/: default.nix  myxmonad.cabal  xmonad.hs
