name:                myxmonad
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable myxmonad
  main-is:             xmonad.hs
  build-depends:       base,
                       xmonad,
                       xmonad-contrib,
                       containers,
                       X11,
                       unix
  default-language:    Haskell2010
